[package]
name = "gemu"
version = "0.1.0"
edition = "2021"
authors = ["jab <jabolina@protonmail.ch>"]

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
mepa = { path = "../mepa" }
abro = { path = "../abro" }

[dev-dependencies]
tokio = { version = "1.15.0", features = ["test-util"] }
